--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.2.5"
+    "@tailwindcss/vite": "^4.0.6",
+    "astro": "^5.2.5",
+    "elmersosa": "file:",
+    "tailwindcss": "^4.0.6"
   }
 }
