--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/mdx": "^4.0.8",
     "@tailwindcss/vite": "^4.0.6",
     "astro": "^5.2.5",
     "elmersosa": "file:",
-    "tailwindcss": "^4.0.6"
+    "tailwindcss": "^4.0.6",
+    "@tailwindcss/typography": "0.5.16"
   }
 }
