--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   },
   "dependencies": {
     "@astrojs/mdx": "^4.0.8",
+    "@tailwindcss/typography": "0.5.16",
     "@tailwindcss/vite": "^4.0.6",
     "astro": "^5.2.5",
     "elmersosa": "file:",
-    "tailwindcss": "^4.0.6",
-    "@tailwindcss/typography": "0.5.16"
+    "preact": "^10.26.2",
+    "tailwindcss": "^4.0.6"
   }
 }
