--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/vite": "^4.0.6",
     "astro": "^5.2.5",
     "elmersosa": "file:",
+    "flowbite": "^3.1.2",
     "preact": "^10.26.2",
     "tailwindcss": "^4.0.6"
   }
